Fixing home page spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -321,6 +321,10 @@
   }
 }
 
+.post-entry {
+	margin-right: 20%;
+}
+
 /*.sidebar-evan {
   padding: 15px;
   padding-bottom: 29.2%;
